--- a/index.html
+++ b/index.html
@@ -147,10 +147,15 @@
 
   <!-- Sélecteur de langue -->
   <div class="language-switcher text-center mt-2">
-    <a href="index.html" class="lang-link me-2" lang="fr" hreflang="fr">FR</a>
-    <!--
-    <a href="index_en.html" class="lang-link ms-2" lang="en" hreflang="en">EN</a>
-    -->
+    <a href="index.html"
+       class="lang-link me-2"
+       lang="fr"
+       hreflang="fr">FR</a>
+    |
+    <a href="index_en.html"
+       class="lang-link ms-2"
+       lang="en"
+       hreflang="en">EN</a>
   </div>
 
   <!-- Menu principal -->
@@ -504,7 +509,7 @@
     </p>
 
     <!-- Bouton de téléchargement -->
-    <a href="assets/docs/cv_pro_these_offre_emploi.pdf" download class="btn-cv mt-3" target="_blank" rel="noopener">
+    <a href="assets/docs/CV_2025-12-19_Albert_NDOUR.pdf" download class="btn-cv mt-3" target="_blank" rel="noopener">
       <i class="bi bi-file-earmark-arrow-down me-2"></i> Télécharger mon CV (PDF)
     </a>
   </div>
