--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
   <div class="container section-title" data-aos="fade-up">
     <!-- Garde un seul H1 sur la page (normalement dans la section Hero). 
          Ici, on met un H2 pour rester sémantique. -->
-    <h2 class="mb-2">About</h2>
+    <h2 class="mb-2">A Propos</h2>
     <p class="mb-0">
       Étudiant en Master 2 de Bioinformatique, spécialisé dans l’analyse de données omiques et le développement d’outils automatisés.
       J’aime concevoir des solutions à l’interface entre la biologie, la data science et le développement logiciel, pour faire parler les données du vivant.
