--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
 
   <!-- Localisation -->
   <div class="text-center mt-2 small text-white-50">
-    Québec (Laval) — Université Laval<br>
-    Pavillon Ernest-Lemieux
+    PhD Médecine moléculaire — Université Laval<br>
+    Québec (Laval), Canada
   </div>
 
   <!-- Sélecteur de langue -->
