--- a/index_en.html
+++ b/index_en.html
@@ -140,6 +140,13 @@
     </a>
   </div>
 
+  <!-- Location -->
+  <div class="text-center mt-2 small text-white-50">
+    PhD in Molecular Medicine — Université Laval<br>
+    Québec (Laval), Canada
+  </div>
+
+
   <!-- Language switcher -->
   <div class="language-switcher text-center mt-2">
     <a href="index.html"
