--- a/index_en.html
+++ b/index_en.html
@@ -553,13 +553,22 @@
     <section id="resume" class="resume section">
 
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
+ 
+      <div class="container section-title d-flex flex-column align-items-center text-center" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>
-          Bioinformatician specialized in microbiome, transcriptomics (bulk & single-cell),
-          and reproducible data analysis pipelines for academic research and applied consulting.
-        </p>
+          <p>Failure is quitting before you succeed.</p>
+
+        <!-- Download button -->
+        <a href="assets/docs/CV_2025-12-19_Albert_NDOUR.pdf"
+          download
+          class="btn-cv mt-3"
+          target="_blank"
+          rel="noopener">
+          <i class="bi bi-file-earmark-arrow-down me-2"></i>
+          Download my CV (PDF)
+        </a>
       </div>
+
       <!-- End Section Title -->
 
       <div class="container">
@@ -574,17 +583,20 @@
               <h4>Albert NDOUR</h4>
               <p>
                 <em>
-                  Bioinformatics consultant & research-oriented data scientist with strong expertise
-                  in multi-omics analysis, microbiome profiling and RNA-seq workflows.
+                PhD candidate in Molecular Medicine, specialized in bioinformatics,
+                working at the interface between soil health and omics approaches,
+                integrating machine learning and deep learning methods
+                to model and interpret complex biological data.
                 </em>
               </p>
               <ul class="list-adn">
-                <li>Québec (Laval), Canada</li>
-                <li><a href="mailto:albert.ndour.1@ulaval.ca">albert.ndour.1@ulaval.ca</a></li>
+                <li>Québec (Laval), Canada — Université Laval</li>
                 <li>
-                  <a href="https://www.linkedin.com/in/albert-ndour-b800a8223/"
-                    target="_blank" rel="noopener">
-                    linkedin.com/in/albert-ndour
+                  <a href="tel:+14184556406">+1 418 455 6406</a>
+                </li>
+                <li>
+                  <a href="mailto:albert.ndour.1@ulaval.ca">
+                    albert.ndour.1@ulaval.ca
                   </a>
                 </li>
               </ul>
