--- a/index.html
+++ b/index.html
@@ -226,8 +226,12 @@
          Ici, on met un H2 pour rester sémantique. -->
     <h2 class="mb-2">A Propos</h2>
     <p class="mb-0">
-      Étudiant en Master 2 de Bioinformatique, spécialisé dans l’analyse de données omiques et le développement d’outils automatisés.
-      J’aime concevoir des solutions à l’interface entre la biologie, la data science et le développement logiciel, pour faire parler les données du vivant.
+      <em>
+      Doctorant en médecine moléculaire, spécialisé en bioinformatique,
+      je travaille à l’interface entre la santé des sols et les approches omiques,
+      en intégrant des méthodes de machine learning et de deep learning
+      pour modéliser et interpréter des données biologiques complexes.
+      </em>
     </p>
   </div>
 
@@ -501,13 +505,7 @@
 <!-- Section Title -->
   <div class="container section-title d-flex flex-column align-items-center text-center" data-aos="fade-up">
     <h2>CV</h2>
-    <p>
-      Étudiant en Master 2 de Bioinformatique, spécialisé dans l’analyse de données omiques, 
-      le développement de workflows automatisés et d’applications web pour la biologie.
-      Passionné par la recherche appliquée et fondamentale, je souhaite contribuer à des projets 
-      scientifiques à l’interface entre la biologie et la data science.
-    </p>
-
+    <p>L’échec, c’est abandonner sans avoir réussi.</p> 
     <!-- Bouton de téléchargement -->
     <a href="assets/docs/CV_2025-12-19_Albert_NDOUR.pdf" download class="btn-cv mt-3" target="_blank" rel="noopener">
       <i class="bi bi-file-earmark-arrow-down me-2"></i> Télécharger mon CV (PDF)
@@ -526,8 +524,7 @@
       <h3 class="resume-title">Profil</h3>
       <div class="resume-item pb-0">
         <h4>Albert NDOUR</h4>
-        <p><em>Alternant en bioinformatique — Microbiome, RNA-seq & modélisation</em></p>
-        <ul>
+        <ul class="list-adn">
           <li>Québec (Laval), Canada — Université Laval</li>
           <li>
             <a href="tel:+14184556406">+1 418 455 6406</a>
@@ -535,13 +532,6 @@
           <li>
             <a href="mailto:albert.ndour.1@ulaval.ca">
               albert.ndour.1@ulaval.ca
-            </a>
-          </li>
-          <li>
-            <a href="https://www.linkedin.com/in/albert-ndour-b800a8223/"
-              target="_blank"
-              rel="noopener">
-              linkedin.com/in/albert-ndour
             </a>
           </li>
         </ul>
