--- a/index_en.html
+++ b/index_en.html
@@ -164,32 +164,32 @@
   <nav id="navmenu" class="navmenu" aria-label="Main navigation">
     <ul>
       <li>
-        <a href="#hero" class="active" aria-current="page">
+        <a href="index.html#hero">
           <i class="bi bi-house navicon"></i> Home
         </a>
       </li>
       <li>
-        <a href="#about">
+        <a href="index.html#about">
           <i class="bi bi-person navicon"></i> About
         </a>
       </li>
       <li>
-        <a href="#resume">
+        <a href="index.html#resume">
           <i class="bi bi-file-earmark-text navicon"></i> Resume
         </a>
       </li>
       <li>
-        <a href="#portfolio">
+        <a href="index.html#portfolio">
           <i class="bi bi-images navicon"></i> Projects
         </a>
       </li>
       <li>
-        <a href="#localisation">
-          <i class="bi bi-geo-alt navicon"></i> Québec, Canada
+        <a href="service-details.html" class="active" aria-current="page">
+          <i class="bi bi-gear navicon"></i> Services
         </a>
       </li>
       <li>
-        <a href="#contact">
+        <a href="index.html#contact">
           <i class="bi bi-envelope navicon"></i> Contact
         </a>
       </li>
