--- a/service-details.html
+++ b/service-details.html
@@ -57,16 +57,44 @@
     </a>
   </div>
 
-  <nav id="navmenu" class="navmenu">
+  <nav id="navmenu" class="navmenu" aria-label="Navigation principale">
     <ul>
-      <li><a href="index.html#hero"><i class="bi bi-house navicon"></i> Accueil</a></li>
-      <li><a href="index.html#about"><i class="bi bi-person navicon"></i> À propos</a></li>
-      <li><a href="index.html#resume"><i class="bi bi-file-earmark-text navicon"></i> CV</a></li>
-      <li><a href="index.html#portfolio"><i class="bi bi-images navicon"></i> Projets</a></li>
-      <li><a href="index.html#services" class="active"><i class="bi bi-hdd-stack navicon"></i> Compétences</a></li>
-      <li><a href="index.html#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
+      <li>
+        <a href="index.html#hero">
+          <i class="bi bi-house navicon"></i> Accueil
+        </a>
+      </li>
+      <li>
+        <a href="index.html#about">
+          <i class="bi bi-person navicon"></i> À propos
+        </a>
+      </li>
+      <li>
+        <a href="index.html#resume">
+          <i class="bi bi-file-earmark-text navicon"></i> CV
+        </a>
+      </li>
+      <li>
+        <a href="index.html#portfolio">
+          <i class="bi bi-images navicon"></i> Projets
+        </a>
+      </li>
+
+      <!-- PAGE COURANTE -->
+      <li>
+        <a href="service-details.html" class="active" aria-current="page">
+          <i class="bi bi-hdd-stack navicon"></i> Services
+        </a>
+      </li>
+
+      <li>
+        <a href="index.html#contact">
+          <i class="bi bi-envelope navicon"></i> Contact
+        </a>
+      </li>
     </ul>
   </nav>
+
 </header>
 
 <!-- ================= MAIN ================= -->
