--- a/index.html
+++ b/index.html
@@ -160,34 +160,43 @@
 
   <!-- Menu principal -->
   <nav id="navmenu" class="navmenu" aria-label="Navigation principale">
-    <ul>
-      <li>
-        <a href="#hero" class="active" aria-current="page">
-          <i class="bi bi-house navicon"></i> Accueil
-        </a>
-      </li>
-      <li>
-        <a href="#about">
-          <i class="bi bi-person navicon"></i> À propos
-        </a>
-      </li>
-      <li>
-        <a href="#resume">
-          <i class="bi bi-file-earmark-text navicon"></i> CV
-        </a>
-      </li>
-      <li>
-        <a href="#portfolio">
-          <i class="bi bi-images navicon"></i> Portfolio
-        </a>
-      </li>
-      <li>
-        <a href="#contact">
-          <i class="bi bi-envelope navicon"></i> Contact
-        </a>
-      </li>
-    </ul>
-  </nav>
+      <ul>
+        <li>
+          <a href="#hero" class="active" aria-current="page">
+            <i class="bi bi-house navicon"></i> Accueil
+          </a>
+        </li>
+        <li>
+          <a href="#about">
+            <i class="bi bi-person navicon"></i> À propos
+          </a>
+        </li>
+        <li>
+          <a href="#resume">
+            <i class="bi bi-file-earmark-text navicon"></i> CV
+          </a>
+        </li>
+        <li>
+          <a href="#portfolio">
+            <i class="bi bi-images navicon"></i> Portfolio
+          </a>
+        </li>
+
+        <!-- NOUVEAU LIEN -->
+        <li>
+          <a href="service-details.html" class="active" aria-current="page">
+            <i class="bi bi-gear navicon"></i> Services
+          </a>
+        </li>
+
+        <li>
+          <a href="#contact">
+            <i class="bi bi-envelope navicon"></i> Contact
+          </a>
+        </li>
+      </ul>
+    </nav>
+
 
   <!-- Horloge -->
   <div class="text-center mt-3">
@@ -243,7 +252,7 @@
         <figure class="about-photo mb-4">
           <img src="assets/img/accueil4.jpg"
                class="img-fluid w-100 rounded-3"
-               alt="Portrait de Tidjani Cissé, bioinformaticien">
+               alt="Portrait de Albert NDOUR, bioinformaticien">
         </figure>
       </aside>
 
